--- a/ExpensePaymentSystem/ExpensePaymentSystem.Business/ExpensePaymentSystem.Business.csproj
+++ b/ExpensePaymentSystem/ExpensePaymentSystem.Business/ExpensePaymentSystem.Business.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+        <PackageReference Include="Hangfire" Version="1.7.28" />
+        <PackageReference Include="Hangfire.PostgreSql" Version="1.9.8" />
+        <PackageReference Include="Hangfire.PostgreSql.Npgsql5" Version="1.9.8" />
+        <PackageReference Include="MediatR" Version="12.0.0"/>
+        <PackageReference Include="AutoMapper" Version="12.0.0"/>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0"/>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.2" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\ExpensePaymentSystem.Data\ExpensePaymentSystem.Data.csproj"/>
+        <ProjectReference Include="..\ExpensePaymentSystem.Schema\ExpensePaymentSystem.Schema.csproj" />
+    </ItemGroup>
+
 </Project>
