--- a/ExpensePaymentSystem/ExpensePaymentSystem.Business/ExpensePaymentSystem.Business.csproj
+++ b/ExpensePaymentSystem/ExpensePaymentSystem.Business/ExpensePaymentSystem.Business.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0"/>
         <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.2" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     </ItemGroup>
 
     <ItemGroup>
